# airflow-labs

./: .env.epona  .env.superset  .gitignore  Makefile  README.md  docker-compose.yml
compose/airflow/: Dockerfile  pyproject.toml
compose/airflow/config/: airflow.cfg
compose/airflow/dags/: complex_dag.py
compose/postgres/: docker_postgres_init.sql
compose/superset/: Dockerfile  docker-init.sh  pyproject.toml  superset_config.py
dags/: model_training.py  sync_brand_stock.py
