[tool.poetry]
name = "airflow-lab"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "*"
redis = "*"
flower = "*"
mysqlclient = "*"
apache-airflow = "^2.0.2"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
