[tool.poetry]
name = "superset-lab"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gevent = "^20.6.2"
psycopg2-binary = "^2.8.5"
redis = "^3.5.3"
elasticsearch = "^7.8.0"
apache-superset = "^0.36.0"
sqlalchemy-clickhouse = "^0.1.5"
elasticsearch-dbapi = "^0.1.2"
flower = "^0.9.4"
flask-openid = "^1.2.5"
python3-openid = "3.2.0"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
